# ROOT-Boad-Game-Simulator

./: .dockerignore  .gitignore  CLAUDE.md  README.md  pyproject.toml  root-simulator-roadmap.md
analysis/: __init__.py  dashboard.py  report.py
bots/: __init__.py  base.py  random_bot.py
bots/heuristic/: __init__.py  alliance.py  bot.py  evaluate.py  eyrie.py  marquise.py  vagabond.py
docker/: Dockerfile  README.md  compose.yaml
engine/: DESIGN.md  __init__.py  actions.py  apply.py  battle.py  board.py  cards.py  crafting.py  game.py  legal.py  mechanics.py  selftest.py  state.py  types.py
engine/data/: boards.json  cards.json  map_autumn.json  quests.json
engine/factions/: __init__.py  alliance.py  dummy.py  eyrie.py  marquise.py  vagabond.py
rl/: __init__.py  catalog.py  encoder.py  env.py  eval.py  league.py  net.py  nn_policy.py  ppo.py  train.py
rules/: birds.md  cat.md  common.md  data-verification.md  vagabond.md  woodland.md
server/: __init__.py  app.py  games.py  models.py  policies.py
sim/: __init__.py  smoke.py
simulation/: __init__.py  runner.py
tests/: conftest.py  test_alliance.py  test_common.py  test_eyrie.py  test_heuristic.py  test_invariants.py  test_league.py  test_marquise.py  test_ppo.py  test_record.py  test_rl.py  test_selftest.py  test_server.py  test_vagabond.py
tools/: extract_rulebook.py  record_game.py
ui/: viewer.html
web/: README.md  index.html  package-lock.json  vite.config.ts
web/src/: App.css  App.tsx  api.ts  constants.ts  index.css  types.ts  utils.ts
web/src/components/: Board.tsx  FactionPanel.tsx  GameList.tsx  GenerateForm.tsx  StepControls.tsx
